app/styles/au/_au-components.scss
/* ... */
.au-c-dropdown__menu {
  min-width: 23rem;
}

.au-c-dropdown__menu [role="menuitem"] {
  padding: 1rem 1.5rem;
  border: none;
}

.au-c-dropdown__menu > [role="menuitem"] + [role="menuitem"],
.au-c-dropdown__menu > [role="group"] + [role="group"],
.au-c-dropdown__menu > [role="group"] + [role="menuitem"],
.au-c-dropdown__menu > [role="menuitem"] + [role="group"] {
  border-top: none;
}

.au-c-input:focus {
  border-color: $au-input-border-color !important;
  box-shadow: none !important;

  outline: var(--au-outline);
  outline-offset: var(--au-outline-offset);
}

.au-c-control__indicator {
  margin-top: 0.4rem; // TODO: delete when global line height from AU is applied here in Kaleidos
}

// Modal fixes
.au-c-modal--fullscreen {
  max-width: 100%;
  max-height: 100%;
  width: 100%;
  height: 100%;
  left: 0;
  border-radius: 0;
}

.au-c-modal__title {
  @include au-font-size($au-h5);
}

.au-c-modal__close {
  background-color: $au-white;
}

// Fix missing noactions class
.auk-table--noactions .data-table__actions--top {
  display: none;
}

// Fieldset

.au-c-fieldset {
  gap: $au-unit-small;
}

.au-c-fieldset--inline {
  gap: $au-unit;
}

.au-c-fieldset-legend {
  color: $auk-gray-700; // TODO: delete when auk-label as a whole is refactored
  font-size: var(--au-global-font-size) !important;
}

// Toggle switch

.au-c-toggle-switch__label {
  &:empty {
    margin-left: 0;
  }
}

// Control group

.au-c-control-group {
  gap: .6rem;

  > .au-c-control-group {
    margin-left: 2rem;
  }

  + .au-c-control-group {
    margin-top: .6rem;
  }
}

.au-c-control-group--inline {
  gap: 2rem;

  &:has(.au-c-control-group) {
    > .au-c-control-group {
      @include style-warning('Nested control groups can\'t be used when the parent group has @layout \'inline\' defined.');
    }
  }
}

// Alert

.au-c-alert {
  font-size: 1.5rem;
}

.au-c-alert--small {
  .au-c-icon {
    height: 1.5rem;
    width: 1.6rem;
  }
}

// Badge

.auk-empty-state {
  .au-c-badge {
    margin-right: 2rem;
  }
}

.au-c-badge--small {
  height: 2.3rem;
  width: 2.4rem;

  .au-c-icon {
    height: 1.5rem;
    width: 1.6rem;
  }
}

// Toaster

.au-c-toaster {
  width: auto;
  align-items: flex-end;
}

.au-c-toaster {
  .au-c-alert {
    min-width: 420px;
    max-width: 580px;
  }
}

// Additions

.au-c-pill--blank {
  color: $au-pill-color;
  background-color: transparent;
  border-color: transparent;
}

@media print {
  .au-c-pill,
  .au-c-badge {
    print-color-adjust: exact;
    -webkit-print-color-adjust: exact;
  }
}

.au-c-control-group--grid {
  flex-direction: row;
  flex-wrap: wrap;
  gap: 1rem 2rem;

  > * {
    width: calc(33% - 2rem);
  }
}

.au-c-input--mask-normal-letter-spacing {
  letter-spacing: inherit;
}

.au-c-badge--medium {
  height: 3.5rem - 0.1rem; // compensate for visual distortion of perfect circle
  width: 3.5rem;
  margin-right: 0;

  .au-c-icon {
    height: 2.1rem - 0.1rem; // compensate for visual distortion of perfect circle
    width: 2.1rem;
  }

  .au-c-badge__number {
    font-size: 1.8rem;
  }
}

.au-c-content {
  ol:not(.au-c-list-horizontal) {
    list-style: decimal;
    margin-left: $au-unit;

    & > li > ol:not([data-list-style]) {
      list-style-type: inherit;
    }

    &[data-list-style='decimal'] {
      list-style-type: decimal;
    }

    &[data-list-style='upper-roman'] {
      list-style-type: upper-roman;
    }

    &[data-list-style='lower-alpha'] {
      list-style-type: lower-alpha;
    }

    &[data-list-style='upper-alpha'] {
      list-style-type: upper-alpha;
    }
  }

  ol.au-c-list {
    list-style: none;
    margin-left: 0;
  }

  ol:not(.au-c-list-horizontal) li + li {
    margin-top: 0.1rem;
  }

  ol.au-c-list li + li {
    margin-top: 0;
  }

  // Provides the general styling for the decimal-extended (multi-level) list type
  // NOTE: This is limited to a certain levels deep because otherwise the styling keep overriding each other (`[data-list-style='decimal-extended']` and the rest of the ol/ul selectors)
  @mixin decimal-extended-styling($levels, $current-level: 1) {
    display: table;
    list-style-type: none;
    margin: 0;
    counter-reset: item;

    > li {
      display: table-row;
      counter-increment: item;

      &:before {
        display: table-cell;
        min-width: 2.4rem;
        padding-right: .5ch;
        text-align: end;
        white-space: nowrap;
        font-variant-numeric: tabular-nums;
        content: counters(item, ".") ". ";
      }

      @if $current-level < $levels {
        > ol:not([data-list-style]) {
          @include decimal-extended-styling($levels, $current-level + 1);
        }
      }

      @if $current-level == $levels {
        > ol:not([data-list-style]) {
          list-style-type: decimal;

          ol:not([data-list-style]) {
            list-style-type: inherit;
          }
        }
      }
    }
  }

  ol[data-list-style='decimal-extended'] {
    @include decimal-extended-styling(5, 1);
  }
}

// TODO: the selector below is not an ideal solution, this needs to replaced by a class selector like `.rdfa-table--fixed` or something similar when the omitted class issue on tabled within ember-rdfa-editor is fixed
.au-c-content {
  #attendees,
  #absentees {
    table-layout: fixed;
  }
}

